--- a/Workflow/cleaning.yml
+++ b/Workflow/cleaning.yml
@@ -24,7 +24,7 @@ jobs:
 
 
       - name: Run data cleaning script
-        run:  python data_cleaning.py
+        run:  Data Manuplation.py
 
       - name: Upload cleaned CSV
         uses: actions/upload-artifact@v4
